# xdr-snip

./: .gitignore  CLAUDE.md  COLORSPACE.md  Cargo.toml  README.md  build.ps1  config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
assets/: DEMO-RECORDING-GUIDE.md  generate-preview.py
assets/posts/: awesome-lists.md  hackernews.md  reddit-r-rust.md  reddit-r-windows.md
capture-hdr/: Program.cs  ToneMapper.cs  capture-hdr.csproj
crates/snip-app/: Cargo.toml  build.rs
crates/snip-app/src/: capture.rs  clipboard.rs  config.rs  hdr_capture.rs  hotkey.rs  main.rs  notification.rs  overlay.rs  preview.rs  settings.rs  tray.rs
crates/snip-types/: Cargo.toml
crates/snip-types/src/: lib.rs
deck-preview/: test.html
