[package]
name = "xdr-snip"
version = "0.2.0"
edition = "2021"
description = "XDR-aware screenshot tool for Windows — region select, capture, clipboard, tray"

[dependencies]
snip-types = { path = "../snip-types" }

# Cross-platform global hotkey registration
global-hotkey = "0.6"

# System tray icon and menu
tray-icon = "0.19"

# Clipboard access (image support)
arboard = "3"

# Image encoding/decoding (JPEG encode for capture, decode for clipboard)
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# TOML config parsing
toml = "0.8"

# Serialization (config structs)
serde = { version = "1", features = ["derive"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Home/config directory resolution
dirs = "6"

# Timestamp generation for filenames
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Windows APIs (Win32 overlay, GDI, shell, DPI, tray)
[dependencies.windows]
version = "0.59"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_System_Com",
]
