[package]
name = "xdr-snip"
version = "0.4.1"
edition = "2021"
description = "XDR-aware screenshot tool for Windows — region select, capture, clipboard, tray"

[dependencies]
snip-types = { path = "../snip-types" }

# Cross-platform global hotkey registration
global-hotkey = "0.6"

# System tray icon and menu
tray-icon = "0.19"

# Clipboard access (image support)
arboard = "3"

# Image encoding/decoding — multi-format support
image = { version = "0.25", default-features = false, features = [
    "jpeg",   # JPEG decode (clipboard loading) + fallback encode
    "png",    # PNG encode/decode
    "tiff",   # TIFF encode/decode
    "bmp",    # BMP encode/decode
    "qoi",    # QOI encode/decode
    "exr",    # OpenEXR encode/decode (HDR preservation)
] }

# Pure Rust JPEG encoder with chroma subsampling control
jpeg-encoder = "0.6"

# WebP encoding — lossy + lossless via libwebp
webp = "0.3"

# AVIF encoding via rav1e
ravif = "0.11"
rgb = "0.8"

# Half-float (f16) conversion for HDR pixel data
half = "2"

# Parallel scanline processing for tone mapping
rayon = "1"

# TOML config parsing
toml = "0.8"

# Serialization (config structs)
serde = { version = "1", features = ["derive"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Home/config directory resolution
dirs = "6"

# Timestamp generation for filenames
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Windows APIs (Win32 overlay, GDI, shell, DPI, tray, D3D11, WinRT capture)
[dependencies.windows]
version = "0.59"
features = [
    # Win32 UI
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    # Win32 Graphics
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    # Win32 System
    "Win32_System_LibraryLoader",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Com",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_Foundation",
    # WinRT (Graphics Capture + HDR)
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Imaging",
    "Foundation",
    "Storage_Streams",
]
